# Orange-Button-ProductRegistry

./: .dockerignore  .gitignore  Dockerfile  LICENSE  ProductRegistryAPISchema.yaml  README.md  README.rst  copilot.asc  dbcnf text file sample.txt  docker-compose.yml  load_local_db_to_remote_db.sql  nginx.conf  pyproject.toml  requirements.txt  start.sh  task-definition.json
ob_taxonomy/: Master-OB-OpenAPI.json  apps.py  generate_models.py  models.py  upload_taxonomy.ipynb
ob_taxonomy/migrations/: 0001_initial.py  0002_auto_20260228_2249.py
product_registry/: asgi.py  manage.py  settings.py  settings_deployment.py  urls.py  wsgi.py
product_registry/product_registry/: settings.py  urls.py  wsgi.py
server/: authentication.py  forms.py  models.py  ob_item_types.py  pagination.py  permissions.py  serializers.py  uploads.py  uploads2.py  urls.py  urls_api.py  views.py  views_api.py
server/data_upsert/: 20260216_Product_Registry_DomesticContent v1.csv  EntityCodes.csv  EntityCodes_cleaned.csv  collect_EntityCodes.ipynb  upsert_sourcecountry_no_orm.ipynb  upsert_utils.py
server/migrations/: 0001_initial.py  0002_apitoken.py  0002_remove_product_proddatasheet_value_and_more.py  0003_acinput_acoutput_address_certificationagency_dcinput_and_more.py
server/references/: Master-OB-OpenAPI.json
server/schemas/: Master-OB-OpenAPI.json
server/tests/: test_ob_item_types.py  test_serializers.py
terraform/: .terraform.lock.hcl  bastion.tf  database.tf  dns.tf  ecr.tf  ecs_service.tf  https_cert.tf  load_balancer.tf  main.tf  security_groups.tf  variables.tf  vpc.tf
(+26 files in other folders)
