[project]
name = "ob-prodreg"
version = "0.1.0"
description = ""
readme = "README.rst"
license = "LICENSE"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "polars[pyarrow]>=1.37.1",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.4",
    "jupyterlab>=4.5.3",
    "polars>=1.37.1",
]
